docs: update subsection Funktionale Äquivalenzklassen

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -517,4 +517,18 @@ and Rundshagen, Michael",
     number={4},
     pages={308-320},
     keywords={Software testing;System testing;Graph theory;Fluid flow measurement;Software measurement;Linear programming;Software engineering;Software systems;Software maintenance;National security;Basis;complexity measure;control flow;decomposition;graph theory;independence;linear;modularization;programming;reduction;software;testing},
-    doi={10.1109/TSE.1976.233837}}
+    doi={10.1109/TSE.1976.233837}
+}
+
+@book{ST05,
+    abstract = {Professionelles Pr{\"u}fen und Testen von Software wird zu einer immer wichtigeren Aufgabe, die eine fundierte Ausbildung erfordert. Mit dem Certified-Tester-Programm existiert ein international standardisiertes Aus- und Weiterbildungsschema f{\"u}r Softwaretester. Dieses Buch umfasst den ben{\"o}tigten Stoff zum Ablegen der Pr{\"u}fung Certified Tester (Foundation Level) nach ISTQB-Standard. Es vermittelt das n{\"o}tige Grundlagenwissen und verwendet dabei ein durchg{\"a}ngiges Beispiel. Die wichtigsten Methoden zum Testen von Software und zum Pr{\"u}fen der w{\"a}hrend der Softwareentwicklung verwendeten und erstellten Dokumente werden ausf{\"u}hrlich behandelt. {\"U}ber das in diesem Buch vermittelte Basiswissen sollten sowohl Tester als auch Softwareentwickler und Programmierer verf{\"u}gen. Das Buch ist so aufbereitet, dass es auch f{\"u}r das Selbststudium geeignet ist. Die 3. Auflage ist konform zum aktuellen Lehrplan des International Software Testing Qualifications Board (ISTQB) (Stand: Juli 2005) und ber{\"u}cksichtigt auch dessen neuen Stoffanteile (u.a. exploratives Testen, Risk Based Testing).},
+    address = {Heidelberg},
+    author = {Spillner, Andreas and Linz, Tilo},
+    edition = {3.},
+    isbn = {978-3-89864-358-0},
+    publisher = {dpunkt},
+    title = {Basiswissen Softwaretest},
+    year = 2005
+}
+
+
