--- a/docs/repetitorium/part three/Zustandsautomaten/index.tex
+++ b/docs/repetitorium/part three/Zustandsautomaten/index.tex
@@ -1,4 +1,4 @@
-\chapter{Zustandsautomaten}
+\chapter{Zustandsautomaten}\label{ch:zustandsautomaten}
 
 
 \input{part three/Zustandsautomaten/lernziele}
