docs: add section Strukturorientierte Testverfahren

--- a/docs/repetitorium/part four/Testende Verfahren/index.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/index.tex
@@ -5,6 +5,7 @@
 \newpage
 \input{part four/Testende Verfahren/testende verfahren}
 \input{part four/Testende Verfahren/funktionsorientierte testverfahren}
+\input{part four/Testende Verfahren/strukturorientierte testverfahren}
 
 %\input{part four/Testende Verfahren/zusammenfassung}
 \newpage
