docs: add remarks for modified condition decision coverage

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -531,4 +531,13 @@ and Rundshagen, Michael",
     year = 2005
 }
 
+@BOOK{Hof22,
+    title     = "Theoretische Informatik",
+    author    = "Hoffmann, Dirk W",
+    publisher = "Carl Hanser Verlag GmbH \& Co. KG",
+    month     =  apr,
+    year      =  2022,
+    address   = "M{\"u}nchen"
+}
+
 
