--- a/docs/repetitorium/part four/Testende Verfahren/strukturorientierte testverfahren.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/strukturorientierte testverfahren.tex
@@ -1,4 +1,4 @@
-\section{Strukturorientierte Testverfahren}
+\section{Strukturorientierte Testverfahren}\label{sec:strukturorientierte-testverfahren}
 \begin{tcolorbox}
 Bei \textbf{strukturorientierten Testverfahren}, auch \textbf{White-Box-Tests} genannt, wird zur \textbf{Konstruktion der Testfälle} als auch zur \textbf{Bestimmung der Vollständigkeit} der Tests der Quellcode herangezogen.
 \end{tcolorbox}
