--- a/docs/repetitorium/part four/Testende Verfahren/index.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/index.tex
@@ -6,6 +6,7 @@
 \input{part four/Testende Verfahren/testende verfahren}
 \input{part four/Testende Verfahren/funktionsorientierte testverfahren}
 \input{part four/Testende Verfahren/strukturorientierte testverfahren}
+\input{part four/Testende Verfahren/klassentest objektorientierter systeme}
 
 %\input{part four/Testende Verfahren/zusammenfassung}
 \newpage
