docs: add section integrationstest

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -540,4 +540,11 @@ and Rundshagen, Michael",
     address   = "M{\"u}nchen"
 }
 
-
+@book{Bin99,
+    author = {Binder, Robert V.},
+    title = {Testing object-oriented systems: models, patterns, and tools},
+    year = {1999},
+    isbn = {0201809389},
+    publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+    address = {USA}
+}
