--- a/docs/repetitorium/part four/Testende Verfahren/integrationstest.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/integrationstest.tex
@@ -1,6 +1,6 @@
 \section{Integrationstest}
 \begin{tcolorbox}[title=Integrationstest]
-    Im \textbf{Integrationstext} werden die \textbf{einzeln entwickelten und getesteten} Klassen, Module oder Komponenten zusammengeführt und ihr \textbf{korrektes Zusammenwirken} getestet:
+    Im \textbf{Integrationstest} werden die \textbf{einzeln entwickelten und getesteten} Klassen, Module oder Komponenten zusammengeführt und ihr \textbf{korrektes Zusammenwirken} getestet:
     Im \textbf{Integrationstest} wird die korrekte Erfüllung des \textbf{Entwurfs} getestet.
 \end{tcolorbox}
 
