docs: add section zusammenfassung for testende verfahren

--- a/docs/repetitorium/part four/Testende Verfahren/index.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/index.tex
@@ -11,7 +11,6 @@
 \input{part four/Testende Verfahren/systemtest}
 \input{part four/Testende Verfahren/abnahmetest}
 
-%\input{part four/Testende Verfahren/zusammenfassung}
-\newpage
+\input{part four/Testende Verfahren/zusammenfassung}
 
 
