--- a/docs/repetitorium/part four/Management des QS-Prozesses/testteam.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/testteam.tex
@@ -3,7 +3,7 @@ Der \textbf{Modultest} wird i.d.R. von den Entwicklern durchgeführt, da entdeck
 Auch der \textbf{Integrationstest} wird meistens von Entwicklern durchgeführt, da er stark mit dem Modultest verzahnt ist.\\
 
 \noindent
-Für den \textbf{Systemtest} gibt es he nach Größe der Aufgabe verschiedene Ansätze:
+Für den \textbf{Systemtest} gibt es je nach Größe der Aufgabe verschiedene Ansätze:
 
 \begin{itemize}
     \item in \textbf{sehr kleinen Projekten} testen die Entwickler die Funktionalität anderer Entwickler
